--- a/src/main/resources/appli/accueil/InscriptionView.fxml
+++ b/src/main/resources/appli/accueil/InscriptionView.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="appli.accueil.InscriptionView"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<Pane prefHeight="379.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.LoginController">
+    <Label layoutX="92.0" layoutY="40.0" prefHeight="66.0" prefWidth="294.0" text="CONNEXION" textAlignment="RIGHT">
+        <font>
+            <Font name="Book Antiqua" size="45.0" />
+        </font>
+    </Label>
+    <TextField fx:id="emailIn" layoutX="167.0" layoutY="152.0" promptText="email" />
+    <Label layoutX="122.0" layoutY="154.0" prefHeight="21.0" prefWidth="44.0" text="Email:">
+        <font>
+            <Font name="System Italic" size="15.0" />
+        </font>
+    </Label>
+    <Label layoutX="72.0" layoutY="233.0" prefHeight="21.0" prefWidth="94.0" text="Mot de passe:">
+        <font>
+            <Font name="System Italic" size="15.0" />
+        </font>
+    </Label>
+    <Hyperlink layoutX="131.0" layoutY="324.0" onAction="#btnRedirectionInscription" text="Vous n'avez pas de compte ? Inscription" />
+    <Button layoutX="196.0" layoutY="277.0" mnemonicParsing="false" onAction="#btnConnexion" text="Se connecter" />
+    <PasswordField fx:id="mdpIn" layoutX="167.0" layoutY="231.0" promptText="mot de passe" />
+    <Hyperlink layoutX="179.0" layoutY="343.0" text="Mot de passe oublié ?" />
+    <Label fx:id="erreurIn" alignment="CENTER" layoutX="114.0" layoutY="256.0" prefHeight="21.0" prefWidth="255.0" textAlignment="CENTER" textFill="RED">
+        <font>
+            <Font size="9.0" />
+        </font>
+    </Label>
+</Pane>
