--- a/src/main/resources/appli/accueil/AccueilAdminView.fxml
+++ b/src/main/resources/appli/accueil/AccueilAdminView.fxml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="602.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.AccueilAdminController">
 
-      <Label layoutX="230.0" layoutY="26.0" prefHeight="102.0" prefWidth="380.0" text="ACCUEIL">
+      <Label alignment="CENTER" layoutX="230.0" layoutY="14.0" prefHeight="102.0" prefWidth="380.0" text="GESTION UTILISATEUR">
          <font>
-            <Font size="96.0" />
+            <Font size="36.0" />
          </font>
       </Label>
-      <TableView layoutX="320.0" layoutY="213.0" prefHeight="200.0" prefWidth="200.0" fx:id="tableauUtilisateur">
+      <TableView fx:id="tableauUtilisateur" layoutX="32.0" layoutY="109.0" onMouseClicked="#selected" prefHeight="458.0" prefWidth="622.0">
         <columns>
         </columns>
       </TableView>
+   <Button fx:id="btnSupprimer" alignment="CENTER" disable="true" layoutX="656.0" layoutY="494.0" mnemonicParsing="false" onAction="#supprimerUser" prefHeight="72.0" prefWidth="168.0" text="Supprimer">
+      <font>
+         <Font size="21.0" />
+      </font>
+   </Button>
+   <Label fx:id="zoneOuTuEcrisTonTexte" layoutX="32.0" layoutY="567.0" prefHeight="18.0" prefWidth="622.0" />
+   <Button fx:id="btnSwitchRole" alignment="CENTER" disable="true" layoutX="656.0" layoutY="412.0" mnemonicParsing="false" onAction="#switchUser" prefHeight="72.0" prefWidth="168.0" text="Switch le role ">
+      <font>
+         <Font size="21.0" />
+      </font>
+   </Button>
 
 </AnchorPane>
