--- a/src/main/resources/appli/accueil/ModifUserAdminView.fxml
+++ b/src/main/resources/appli/accueil/ModifUserAdminView.fxml
@@ -2,13 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="489.0" prefWidth="468.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.ModifUserAdminController">
-    <Label alignment="CENTER" layoutX="83.0" layoutY="40.0" prefHeight="66.0" prefWidth="313.0" text="INSCRIPTION" textAlignment="RIGHT">
+<AnchorPane prefHeight="343.0" prefWidth="468.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.ModifUserAdminController">
+    <Label alignment="CENTER" layoutX="44.0" layoutY="36.0" prefHeight="66.0" prefWidth="379.0" text="MODIFICATION" textAlignment="RIGHT">
             <font>
                 <Font name="Book Antiqua" size="45.0" />
             </font>
@@ -19,24 +18,7 @@
                 <Font name="System Italic" size="15.0" />
             </font>
         </Label>
-        <Label layoutX="75.0" layoutY="280.0" prefHeight="21.0" prefWidth="94.0" text="Mot de passe:">
-            <font>
-                <Font name="System Italic" size="15.0" />
-            </font>
-        </Label>
-        <Button layoutX="199.0" layoutY="396.0" mnemonicParsing="false" onAction="#btnModifierUser" text="Modifier" />
-        <PasswordField fx:id="mdpNv" layoutX="167.0" layoutY="278.0" promptText="mot de passe" />
-        <Label fx:id="erreurIn" alignment="CENTER" layoutX="119.0" layoutY="353.0" prefHeight="21.0" prefWidth="255.0" textAlignment="CENTER" textFill="RED">
-            <font>
-                <Font size="9.0" />
-            </font>
-        </Label>
-        <Label layoutX="72.0" layoutY="331.0" prefHeight="21.0" prefWidth="94.0" text="Confirmation: ">
-            <font>
-                <Font name="System Italic" size="15.0" />
-            </font>
-        </Label>
-        <PasswordField fx:id="mdpConfirmationNv" layoutX="167.0" layoutY="329.0" promptText="mot de passe" />
+        <Button layoutX="203.0" layoutY="286.0" mnemonicParsing="false" onAction="#btnModifierUser" text="Modifier" />
         <TextField fx:id="prenomNv" layoutX="167.0" layoutY="190.0" promptText="prenom" />
         <Label layoutX="108.0" layoutY="192.0" prefHeight="21.0" prefWidth="58.0" text="Prénom:">
             <font>
@@ -49,4 +31,6 @@
                 <Font name="System Italic" size="15.0" />
             </font>
         </Label>
+   <Label fx:id="utilisateurConcerne" alignment="CENTER" layoutX="120.0" layoutY="93.0" prefHeight="18.0" prefWidth="228.0" />
+   <Label fx:id="erreurIn" alignment="CENTER" layoutX="207.0" layoutY="259.0" prefHeight="18.0" prefWidth="44.0" />
 </AnchorPane>
