--- a/src/main/resources/appli/accueil/ModifMdpUserView.fxml
+++ b/src/main/resources/appli/accueil/ModifMdpUserView.fxml
@@ -33,5 +33,6 @@
       </Label>
       <Button layoutX="271.0" layoutY="367.0" mnemonicParsing="false" onAction="#btnModifierMdp" text="Modifier" />
       <Label fx:id="erreur" alignment="CENTER" layoutX="73.0" layoutY="344.0" prefHeight="17.0" prefWidth="457.0" />
+      <Button fx:id="btnRetour" layoutX="548.0" layoutY="402.0" mnemonicParsing="false" onAction="#btnRetour" text="Retour" />
    </children>
 </AnchorPane>
