--- a/src/main/resources/appli/accueil/AccueilAdminView.fxml
+++ b/src/main/resources/appli/accueil/AccueilAdminView.fxml
@@ -28,5 +28,6 @@
          <Font size="21.0" />
       </font>
    </Button>
+   <Button layoutX="740.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnDeconnexion" text="Deconnexion" />
 
 </AnchorPane>
