--- a/src/main/resources/appli/accueil/admin/AccueilAdminView.fxml
+++ b/src/main/resources/appli/accueil/admin/AccueilAdminView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="602.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.AccueilAdminController">
+<AnchorPane prefHeight="602.0" prefWidth="840.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.admin.AccueilAdminController">
 
       <Label alignment="CENTER" layoutX="230.0" layoutY="14.0" prefHeight="102.0" prefWidth="380.0" text="GESTION UTILISATEUR">
          <font>
