--- a/src/main/resources/appli/accueil/security/InscriptionView.fxml
+++ b/src/main/resources/appli/accueil/security/InscriptionView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="0.0" prefWidth="0.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.InscriptionController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="0.0" prefWidth="0.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.security.InscriptionController">
        <Label alignment="CENTER" layoutX="83.0" layoutY="40.0" prefHeight="66.0" prefWidth="313.0" text="INSCRIPTION" textAlignment="RIGHT">
            <font>
                <Font name="Book Antiqua" size="45.0" />
