--- a/src/main/resources/appli/accueil/user/ModifUserView.fxml
+++ b/src/main/resources/appli/accueil/user/ModifUserView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="275.0" prefWidth="468.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.ModifUserController">
+<AnchorPane prefHeight="275.0" prefWidth="468.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.user.ModifUserController">
     <Label alignment="CENTER" layoutX="44.0" layoutY="36.0" prefHeight="66.0" prefWidth="379.0" text="MODIFICATION" textAlignment="RIGHT">
         <font>
             <Font name="Book Antiqua" size="45.0" />
