--- a/src/main/resources/appli/accueil/user/liste/ListeAccueilView.fxml
+++ b/src/main/resources/appli/accueil/user/liste/ListeAccueilView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="appli.accueil.ListeAccueilController"
+            fx:controller="appli.accueil.user.liste.ListeAccueilController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
